upd config format

--- a/config.yaml.sample
+++ b/config.yaml.sample
@@ -1,11 +1,14 @@
-PowerCreatorCMSAuthenticationID: 
-aria2_host: http://localhost
-aria2_port: 16800
-aria2_secret: null
-base_dir: 
-platform_token: 
-website_url: https://ovler-young.github.io/hyperaudio-lite/test.html
-base_urls_in: 
-base_urls_out: 
-username: 
-password: 
+authorization:
+  PowerCreatorCMSAuthenticationID: 
+  platform_token: 
+  username: 
+  password: 
+downloader:
+  aria2_host: http://localhost
+  aria2_port: 6800
+  aria2_secret: null
+  base_dir: 
+priview:
+  base_urls_in: 
+  base_urls_out: 
+  website_url: https://ovler-young.github.io/hyperaudio-lite/test.html
